--- a/WebContent/order/order_style.css
+++ b/WebContent/order/order_style.css
@@ -9,16 +9,15 @@ body{
 	width: 1100px;
 	margin:auto;
 	margin-top: 40px;
+	height: 640px;
 }
 #ord_ctn .img{
 	float: left;
-	height: 680px;
-	line-height: 680px;
-	border: 1px solid #eee;
+	height: 655px;
 	margin-bottom: 40px;
 }
 .ord_frm{
-	width: 520px;
+	width: 500px;
 	margin-left: 40px;
 	float: left;
 }
@@ -92,7 +91,7 @@ body{
 
 /*price css*/
 #ord_ctn #price{
-	margin: 35px 0 30px 0;
+	margin-bottom: 30px;
 	width: 100%;
 	text-align: right;
 }
